# zynq_rust

./: .gitignore  Dockerfile  docker-compose.yml  justfile
zynq_rust_prj/: .env  Cargo.toml  justfile  memory.x  zynq_target.json
zynq_rust_prj/.cargo/: config.toml
zynq_rust_prj/libregisters/: Cargo.toml
zynq_rust_prj/libregisters/src/: lib.rs
zynq_rust_prj/libzynq_dev/: Cargo.toml
zynq_rust_prj/libzynq_dev/src/: lib.rs
zynq_rust_prj/libzynq_dev/src/uart/: control_register.rs  mod.rs
zynq_rust_prj/scripts/: calculate_baud_values.py  program_board.py
zynq_rust_prj/zynq_bin/: Cargo.toml
zynq_rust_prj/zynq_bin/src/: main.rs  uart.rs
