[package]
name = "zynq_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
spin = "0.9.8"
volatile-register = "0.2.2"

[target.'cfg(target_arch = "arm")'.dependencies]
panic-halt = "0.2"                          # Add this to handle panics gracefully in a no_std environment.
libregisters = { path = "../libregisters" }
libzynq_dev = { path = "../libzynq_dev" }
